test/trivial/bradc/redefinevar.good
redefinevar.chpl:1: error: 'x' has multiple definitions
redefinevar.chpl:2: note: redefined here
